[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0", features = ["derive"] }
itertools = "0.10.5"
nom = "7.1.1"
regex = "1.7"
petgraph = "0.6.2"
pt = { git = "https://github.com/KGuz/pt.git" }

[dev-dependencies]
concat-idents = "1.1.5"
